Product code not unique (#5)
* Remove unique on product code and use sql null

* Add error state for every function that related to excel import

* Major Changes
- Update gorm version
- Add middleware for auth
- Product importer for multiple price
- Script excel transformer
- Transaction
- Move some entity to its package
- Add transaction table

* Fixing broken rebase
