# docs/swagger.json
@@ -34,13 +34,13 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.Order"
+                            "$ref": "#/definitions/order.Order"
                         }
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "Return array of product",
+                        "description": "Return order data",
                         "schema": {
                             "allOf": [
                                 {
@@ -50,7 +50,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/model.Order"
+                                            "$ref": "#/definitions/order.Order"
                                         }
                                     }
                                 }
@@ -449,7 +449,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.User"
+                            "$ref": "#/definitions/user.User"
                         }
                     }
                 ],
@@ -528,7 +528,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.User"
+                            "$ref": "#/definitions/user.User"
                         }
                     }
                 ],
@@ -544,7 +544,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/model.User"
+                                            "$ref": "#/definitions/user.User"
                                         }
                                     }
                                 }
@@ -648,78 +648,6 @@
                 }
             }
         },
-        "model.Order": {
-            "type": "object",
-            "properties": {
-                "amount_paid": {
-                    "type": "integer",
-                    "example": 150000
-                },
-                "created_at": {
-                    "type": "string"
-                },
-                "customer": {
-                    "type": "object",
-                    "$ref": "#/definitions/model.Customer"
-                },
-                "customer_id": {
-                    "type": "integer",
-                    "example": 1
-                },
-                "deleted_at": {
-                    "type": "string"
-                },
-                "discount": {
-                    "type": "number",
-                    "example": 0
-                },
-                "id": {
-                    "type": "integer",
-                    "example": 1
-                },
-                "invoice": {
-                    "type": "string",
-                    "example": "5-9-2020-000001"
-                },
-                "order_details": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/model.OrderDetail"
-                    }
-                },
-                "payment": {
-                    "type": "object",
-                    "$ref": "#/definitions/model.Payment"
-                },
-                "payment_id": {
-                    "type": "integer",
-                    "example": 1
-                },
-                "ppn": {
-                    "type": "integer",
-                    "example": 13000
-                },
-                "total": {
-                    "type": "integer",
-                    "example": 130000
-                },
-                "total_change": {
-                    "type": "integer",
-                    "example": 20000
-                },
-                "updated_at": {
-                    "type": "string"
-                },
-                "user": {
-                    "type": "object",
-                    "$ref": "#/definitions/model.User"
-                },
-                "user_id": {
-                    "type": "integer",
-                    "example": 1
-                }
-            }
-        },
         "model.OrderDetail": {
             "type": "object",
             "properties": {
@@ -733,10 +661,6 @@
                     "type": "integer",
                     "example": 1
                 },
-                "order": {
-                    "type": "object",
-                    "$ref": "#/definitions/model.Order"
-                },
                 "order_id": {
                     "type": "integer",
                     "example": 1
@@ -746,12 +670,15 @@
                     "$ref": "#/definitions/model.Product"
                 },
                 "product_id": {
-                    "type": "integer",
-                    "example": 1
+                    "type": "integer"
                 },
                 "quantity": {
                     "type": "integer",
                     "example": 2
+                },
+                "sell_price": {
+                    "type": "integer",
+                    "example": 15000
                 },
                 "sub_total": {
                     "type": "integer",
@@ -788,8 +715,8 @@
             "type": "object",
             "properties": {
                 "buy_price": {
-                    "type": "integer",
-                    "example": 10000
+                    "type": "string",
+                    "example": "10000"
                 },
                 "category": {
                     "type": "object",
@@ -801,7 +728,7 @@
                 },
                 "code": {
                     "type": "string",
-                    "example": "unique-code"
+                    "example": "81921872917"
                 },
                 "created_at": {
                     "type": "string"
@@ -825,13 +752,19 @@
                     "type": "string",
                     "example": "product name"
                 },
+                "product_prices": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/model.ProductPrice"
+                    }
+                },
                 "quantity": {
-                    "type": "integer",
-                    "example": 10
+                    "type": "string",
+                    "example": "10"
                 },
                 "sell_price": {
-                    "type": "integer",
-                    "example": 15000
+                    "type": "string",
+                    "example": "15000"
                 },
                 "unit": {
                     "type": "object",
@@ -846,9 +779,42 @@
                 }
             }
         },
+        "model.ProductPrice": {
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "deleted_at": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "product_id": {
+                    "type": "integer"
+                },
+                "quantity_multiplier": {
+                    "type": "integer",
+                    "example": 3
+                },
+                "sell_price": {
+                    "type": "integer",
+                    "example": 15000
+                },
+                "updated_at": {
+                    "type": "string"
+                }
+            }
+        },
         "model.Unit": {
             "type": "object",
             "properties": {
+                "code": {
+                    "type": "string",
+                    "example": "KRT40"
+                },
                 "created_at": {
                     "type": "string"
                 },
@@ -863,12 +829,111 @@
                     "type": "string",
                     "example": "Unit"
                 },
+                "total_pcs": {
+                    "type": "integer",
+                    "example": 1
+                },
                 "updated_at": {
                     "type": "string"
                 }
             }
         },
-        "model.User": {
+        "order.Order": {
+            "type": "object",
+            "properties": {
+                "amount_paid": {
+                    "type": "integer",
+                    "example": 150000
+                },
+                "created_at": {
+                    "type": "string"
+                },
+                "customer": {
+                    "type": "object",
+                    "$ref": "#/definitions/model.Customer"
+                },
+                "customer_id": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "deleted_at": {
+                    "type": "string"
+                },
+                "discount": {
+                    "type": "number",
+                    "example": 0
+                },
+                "id": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "invoice": {
+                    "type": "string",
+                    "example": "5-9-2020-000001"
+                },
+                "note": {
+                    "type": "string",
+                    "example": "This was a pending transaction for specific customer"
+                },
+                "order_details": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/model.OrderDetail"
+                    }
+                },
+                "payment": {
+                    "type": "object",
+                    "$ref": "#/definitions/model.Payment"
+                },
+                "payment_id": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "ppn": {
+                    "type": "integer",
+                    "example": 13000
+                },
+                "status": {
+                    "type": "integer"
+                },
+                "total": {
+                    "type": "integer",
+                    "example": 130000
+                },
+                "total_change": {
+                    "type": "integer",
+                    "example": 20000
+                },
+                "updated_at": {
+                    "type": "string"
+                },
+                "user": {
+                    "type": "object",
+                    "$ref": "#/definitions/user.User"
+                },
+                "user_id": {
+                    "type": "integer",
+                    "example": 1
+                }
+            }
+        },
+        "response.ResponseMapper": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer",
+                    "example": 200
+                },
+                "data": {
+                    "type": "object"
+                },
+                "message": {
+                    "type": "string",
+                    "example": "Success getting all products"
+                }
+            }
+        },
+        "user.User": {
             "type": "object",
             "properties": {
                 "address": {
@@ -906,22 +971,6 @@
                 "username": {
                     "type": "string",
                     "example": "cashier"
-                }
-            }
-        },
-        "response.ResponseMapper": {
-            "type": "object",
-            "properties": {
-                "code": {
-                    "type": "integer",
-                    "example": 200
-                },
-                "data": {
-                    "type": "object"
-                },
-                "message": {
-                    "type": "string",
-                    "example": "Success getting all products"
                 }
             }
         }
